[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres"] }
dotenv = "0.15"
jsonwebtoken = "9.2.0"
argon2 = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
http = "1.2.0"
chrono = "0.4.39"